--- a/kodilla-testing/build.gradle
+++ b/kodilla-testing/build.gradle
@@ -5,16 +5,13 @@ plugins {
 group = 'com.kodilla'
 version = '0.0.1-SNAPSHOT'
 
-java {
-    sourceCompatibility = '17'
-}
-
 repositories {
     mavenCentral()
 }
 
 dependencies {
-
+    testImplementation platform('org.junit:junit-bom:5.10.0')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
 test {
