--- a/kodilla-good-patterns/build.gradle
+++ b/kodilla-good-patterns/build.gradle
@@ -1,21 +1,17 @@
 plugins {
     id 'java'
-    id 'application'
 }
 
 group = 'com.kodilla'
 version = '0.0.1-SNAPSHOT'
-
-java {
-    sourceCompatibility = '17'
-}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-
+    testImplementation platform('org.junit:junit-bom:5.10.0')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
 test {
