--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,5 @@ include 'com.kodilla.patterns.enums.hotel'
 include 'kodilla-patterns-enums-hotel'
 include 'kodilla-jdbc'
 include 'kodilla-jdbc'
+include 'kodilla-rps'
 
