--- a/settings.gradle
+++ b/settings.gradle
@@ -11,4 +11,5 @@ include 'kodilla-patterns-enums-hotel'
 include 'kodilla-jdbc'
 include 'kodilla-jdbc'
 include 'kodilla-rps'
+include 'kodilla-hibernate'
 
