--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,5 @@ include 'kodilla-jdbc'
 include 'kodilla-rps'
 include 'kodilla-hibernate'
 include 'AdditionalTasks'
+include 'kodilla-testing2'
 
